--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Open Sans", sans-serif;
+  text-rendering: optimizeLegibility;
+}
+details summary::-webkit-details-marker,
+details summary::marker {
+  display: none;
+  content: "";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
 }
+
+::before {
+  font-family: "copenhagen-icons";
+  font-style: normal;
+  font-weight: normal;
+
+  line-height: 1em;
+  vertical-align: middle;
+  -webkit-font-smoothing: antialiased;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
