--- a/src/output.css
+++ b/src/output.css
@@ -954,6 +954,10 @@ video {
   aspect-ratio: 750/744;
 }
 
+.aspect-\[600\/1299\] {
+  aspect-ratio: 600/1299;
+}
+
 .aspect-\[1\] {
   aspect-ratio: 1;
 }
@@ -964,10 +968,6 @@ video {
 
 .aspect-\[4\/3\] {
   aspect-ratio: 4/3;
-}
-
-.aspect-\[600\/1299\] {
-  aspect-ratio: 600/1299;
 }
 
 .h-11 {
@@ -1243,8 +1243,8 @@ video {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-\[-34\] {
-  --tw-translate-y: -34;
+.translate-y-\[-34px\] {
+  --tw-translate-y: -34px;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1281,12 +1281,6 @@ video {
 
 .translate-y-\[calc\(-40\%\)\] {
   --tw-translate-y: calc(-40%);
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[-34px\] {
-  --tw-translate-y: -34px;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1682,11 +1676,6 @@ video {
   padding-bottom: 2px;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1710,6 +1699,11 @@ video {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-5 {
@@ -2023,9 +2017,19 @@ video {
   background-color: rgb(240 171 252 / var(--tw-bg-opacity));
 }
 
+.selection\:bg-color-of-selection *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 38 46 / var(--tw-bg-opacity));
+}
+
 .selection\:text-fuchsia-900 *::selection {
   --tw-text-opacity: 1;
   color: rgb(112 26 117 / var(--tw-text-opacity));
+}
+
+.selection\:text-white *::selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .selection\:bg-fuchsia-300::selection {
@@ -2033,9 +2037,19 @@ video {
   background-color: rgb(240 171 252 / var(--tw-bg-opacity));
 }
 
+.selection\:bg-color-of-selection::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 38 46 / var(--tw-bg-opacity));
+}
+
 .selection\:text-fuchsia-900::selection {
   --tw-text-opacity: 1;
   color: rgb(112 26 117 / var(--tw-text-opacity));
+}
+
+.selection\:text-white::selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .before\:my-0::before {
@@ -2384,10 +2398,6 @@ video {
     margin-bottom: 1rem;
   }
 
-  .min-\[896px\]\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
   .min-\[896px\]\:mt-20 {
     margin-top: 5rem;
   }
@@ -2396,12 +2406,12 @@ video {
     margin-bottom: 1.5rem;
   }
 
-  .min-\[896px\]\:box-content {
-    box-sizing: content-box;
+  .min-\[896px\]\:ml-5 {
+    margin-left: 1.25rem;
   }
 
-  .min-\[896px\]\:block {
-    display: block;
+  .min-\[896px\]\:box-content {
+    box-sizing: content-box;
   }
 
   .min-\[896px\]\:flex {
